[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/logo.png" type="Texture" id=1]
[ext_resource path="res://UI/Buttons/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/pixelmix_bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://World/GrassBackground.png" type="Texture" id=4]
[ext_resource path="res://UI/Anims/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=6]
[ext_resource path="res://World/OriginalDirtTileset.png" type="Texture" id=7]
[ext_resource path="res://World/Bush.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Tree.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/TreeOrange.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/volume-border-icon.png" type="Texture" id=11]
[ext_resource path="res://UI/volume-icon.png" type="Texture" id=12]

[sub_resource type="TileSet" id=2]
0/name = "OriginalDirtTileset.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 176, 80 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 3, 3 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -171, 6 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 163, 99 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 720, 224, 352, 208 )

[node name="Elements" type="YSort" parent="."]

[node name="DirtPathTileMap" type="TileMap" parent="Elements"]
position = Vector2( -109, -18 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 11, 0, 0, 12, 0, 1, 13, 0, 1, 14, 0, 2, 16, 0, 3, 19, 0, 0, 20, 0, 1, 21, 0, 2, 65547, 0, 65536, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 131077, 65551, 0, 1, 65552, 0, 131080, 65553, 0, 1, 65554, 0, 1, 65555, 0, 131078, 65556, 0, 65541, 65557, 0, 131074, 131083, 0, 131072, 131084, 0, 65542, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65538, 196620, 0, 65536, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65537, 196628, 0, 65538, 262156, 0, 65536, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 131077, 262165, 0, 2, 327691, 0, 0, 327692, 0, 131078, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 65538, 393227, 0, 131072, 393228, 0, 131073, 393229, 0, 131073, 393230, 0, 131073, 393231, 0, 131073, 393232, 0, 65542, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65541, 393236, 0, 131073, 393237, 0, 196613, 393238, 0, 196610, 458768, 0, 131072, 458769, 0, 131073, 458770, 0, 131073, 458771, 0, 65543, 458777, 0, 0, 458778, 0, 2, 524298, 0, 0, 524299, 0, 1, 524300, 0, 2, 524307, 0, 131075, 524312, 0, 0, 524313, 0, 131078, 524314, 0, 65538, 589833, 0, 0, 589834, 0, 65545, 589835, 0, 131073, 589836, 0, 131074, 589848, 0, 131072, 589849, 0, 131073, 589850, 0, 131074, 655369, 0, 131072, 655370, 0, 131074, 720915, 0, 196611 )

[node name="Bush1" parent="Elements" instance=ExtResource( 8 )]
position = Vector2( 94, 65 )

[node name="Bush2" parent="Elements" instance=ExtResource( 8 )]
position = Vector2( 19, 87 )

[node name="Bush3" parent="Elements" instance=ExtResource( 8 )]
position = Vector2( 276, 153 )

[node name="Bush4" parent="Elements" instance=ExtResource( 8 )]
position = Vector2( 299, 21 )

[node name="TreeGreen" parent="Elements" instance=ExtResource( 9 )]
position = Vector2( 274, 79 )

[node name="TreeOrange" parent="Elements" instance=ExtResource( 10 )]
position = Vector2( 41, 56 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 320.0
margin_bottom = 80.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_top = 84.0
margin_right = 320.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="NewGameButton" parent="Menu/Buttons" instance=ExtResource( 2 )]
margin_top = 11.0
margin_right = 320.0
margin_bottom = 31.0

[node name="Label" parent="Menu/Buttons/NewGameButton" index="0"]
text = "NEW GAME"

[node name="LeaderBoardButton" parent="Menu/Buttons" instance=ExtResource( 2 )]
margin_top = 41.0
margin_right = 320.0
margin_bottom = 61.0

[node name="Label" parent="Menu/Buttons/LeaderBoardButton" index="0"]
text = "LEADER BOARD"

[node name="Label" type="Label" parent="Menu"]
margin_top = 161.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "a game by @drehdantas
"
align = 1
valign = 1

[node name="VolumeButton" type="Button" parent="."]
margin_left = 5.0
margin_top = 150.0
margin_right = 29.0
margin_bottom = 176.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeIcon" type="Sprite" parent="VolumeButton"]
position = Vector2( 12.25, 13.25 )
scale = Vector2( 0.612501, 0.612501 )
texture = ExtResource( 12 )

[node name="VolumeBorderIcon" type="Sprite" parent="VolumeButton"]
position = Vector2( 12, 13 )
scale = Vector2( 0.649999, 0.649999 )
texture = ExtResource( 11 )

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Menu/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/LeaderBoardButton" to="." method="_on_LeaderBoardButton_pressed"]
[connection signal="pressed" from="VolumeButton" to="." method="_on_VolumeButton_pressed"]
[connection signal="fadeFinished" from="FadeIn" to="." method="_on_FadeIn_fadeFinished"]

[editable path="Menu/Buttons/NewGameButton"]
[editable path="Menu/Buttons/LeaderBoardButton"]
